Edit CardView, add edit Item Button

--- a/BookExchange/app/src/main/res/layout/fragment_home.xml
+++ b/BookExchange/app/src/main/res/layout/fragment_home.xml
@@ -25,56 +25,67 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center_horizontal">
+
             <LinearLayout
-                android:layout_width="300dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:gravity="center">
 
                 <Button
                     android:id="@+id/open_close_button"
-                    android:layout_width="300dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
                     android:backgroundTint="@color/green"
                     android:fontFamily="@font/open_sans_regular"
                     android:text="▼ Open filters ▼"
                     android:textColor="@color/dark_grey"/>
 
-        <AutoCompleteTextView
-            android:id="@+id/city_edit_text"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:hint="Enter city"
-            android:maxLength="20"
-            android:minHeight="48dp"
-            android:textColor="@color/light_grey"
-            android:textColorHint="@color/light_grey"
-            android:textSize="18sp"
-            android:visibility="gone"/>
-
-        <CheckBox
-            android:id="@+id/my_check_box"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Only my books"
-            android:fontFamily="@font/open_sans_regular"
-            android:textColor="@color/orange"
-            android:textSize="16dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:visibility="gone"
-            />
-
-                <Button
-                    android:id="@+id/filter_button"
-                    android:layout_width="300dp"
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/green"
-                    android:fontFamily="@font/open_sans_regular"
-                    android:text="Use filter"
-                    android:textColor="@color/dark_grey"
-                    android:visibility="gone" />
+                    android:orientation="vertical">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/city_edit_text"
+                        android:layout_width="300dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:hint="Enter city"
+                        android:maxLength="20"
+                        android:minHeight="48dp"
+                        android:textColor="@color/light_grey"
+                        android:textColorHint="@color/light_grey"
+                        android:textSize="18sp"
+                        android:visibility="visible"/>
+
+                    <CheckBox
+                        android:id="@+id/my_check_box"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Only my books"
+                        android:fontFamily="@font/open_sans_regular"
+                        android:textColor="@color/orange"
+                        android:textSize="16dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:visibility="visible"
+                        />
+
+                    <Button
+                        android:id="@+id/filter_button"
+                        android:layout_width="300dp"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="@color/green"
+                        android:fontFamily="@font/open_sans_regular"
+                        android:text="Use filter"
+                        android:textColor="@color/dark_grey"
+                        android:visibility="visible" />
+
+                </LinearLayout>
         </LinearLayout>
         </LinearLayout>
 
@@ -82,7 +93,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:scrollbars="vertical"
             android:focusable="true"
             android:clickable="true"
