--- a/BookExchange/app/src/main/res/values/colors.xml
+++ b/BookExchange/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="dark_grey">#272727</color>
+    <color name="dark_grey_2">#313131</color>
     <color name="light_grey">#747474</color>
     <color name="orange">#FF652F</color>
     <color name="yellow">#FFE400</color>
