--- a/BookExchange/app/src/main/res/layout/activity_item.xml
+++ b/BookExchange/app/src/main/res/layout/activity_item.xml
@@ -18,24 +18,14 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/name_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:fontFamily="@font/open_sans_italik"
-                android:text="Product Name"
-                android:textAlignment="center"
-                android:textColor="@color/orange"
-                android:textSize="20sp" />
-
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginBottom="10dp">
+                android:layout_marginBottom="10dp"
+                android:orientation="vertical">
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/product_image_card"
@@ -54,45 +44,59 @@
                 </androidx.cardview.widget.CardView>
 
                 <TextView
+                    android:id="@+id/name_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:fontFamily="@font/open_sans_italik"
+                    android:text="Product Name"
+                    android:textAlignment="center"
+                    android:textColor="@color/orange"
+                    android:textSize="20sp" />
+
+                <TextView
                     android:id="@+id/description_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/product_image_card"
                     android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
+                    android:layout_marginBottom="10dp"
                     android:fontFamily="@font/open_sans_italik"
                     android:text="Product Description"
                     android:textAlignment="textStart"
                     android:textColor="@color/light_grey"
-                    android:textSize="20sp" />
+                    android:textSize="18sp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/orange"
+                    ></LinearLayout>
 
                 <TextView
                     android:id="@+id/city_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/description_text"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
                     android:fontFamily="@font/open_sans_italik"
                     android:text="City:"
                     android:textAlignment="textStart"
                     android:textColor="@color/light_grey"
-                    android:textSize="14sp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/date_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/description_text"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
                     android:fontFamily="@font/open_sans_italik"
                     android:text="Time:"
-                    android:textAlignment="textEnd"
+                    android:textAlignment="textStart"
                     android:textColor="@color/light_grey"
-                    android:textSize="14sp" />
+                    android:textSize="16sp" />
 
-            </RelativeLayout>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -262,6 +266,17 @@
                     </LinearLayout>
 
                 </LinearLayout>
+
+                <Button
+                    android:id="@+id/edit_button"
+                    android:layout_width="380dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:backgroundTint="@color/orange"
+                    android:fontFamily="@font/open_sans_regular"
+                    android:text="Edit"
+                    android:textColor="@color/dark_grey"
+                    android:visibility="visible"/>
 
                 <Button
                     android:id="@+id/delete_button"
