--- a/BookExchange/app/src/main/res/layout/fragment_home.xml
+++ b/BookExchange/app/src/main/res/layout/fragment_home.xml
@@ -32,17 +32,43 @@
                 android:orientation="vertical"
                 android:gravity="center">
 
-                <Button
-                    android:id="@+id/open_close_button"
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="380dp"
+                    android:layout_height="50dp"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:layout_marginTop="10dp">
+
+                    <ImageView
+                        android:id="@+id/search_button"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginLeft="10dp"
+                    android:src="@drawable/ic_search_white_96" />
+
+                <EditText
+                    android:id="@+id/search_edit_text"
+                    android:layout_width="280dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:backgroundTint="@color/green"
-                    android:fontFamily="@font/open_sans_regular"
-                    android:text="▼ Open filters ▼"
-                    android:textColor="@color/dark_grey"/>
+                    android:maxLength="20"
+                    android:minHeight="48dp"
+                    android:textColor="@color/light_grey"
+                    android:textColorHint="@color/light_grey"
+                    android:textSize="18sp"
+                    android:hint="Search..."
+                    android:imeOptions="actionSearch"
+                    android:inputType="text"/>
+
+                    <ImageView
+                        android:id="@+id/open_close_button"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:src="@drawable/ic_filter_white_96" />
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -51,7 +77,7 @@
 
                     <AutoCompleteTextView
                         android:id="@+id/city_edit_text"
-                        android:layout_width="300dp"
+                        android:layout_width="280dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:hint="Enter city"
@@ -60,7 +86,9 @@
                         android:textColor="@color/light_grey"
                         android:textColorHint="@color/light_grey"
                         android:textSize="18sp"
-                        android:visibility="visible"/>
+                        android:visibility="visible"
+                        android:imeOptions="actionSearch"
+                        android:inputType="text"/>
 
                     <CheckBox
                         android:id="@+id/my_check_box"
@@ -74,16 +102,6 @@
                         android:layout_marginBottom="10dp"
                         android:visibility="visible"
                         />
-
-                    <Button
-                        android:id="@+id/filter_button"
-                        android:layout_width="300dp"
-                        android:layout_height="wrap_content"
-                        android:backgroundTint="@color/green"
-                        android:fontFamily="@font/open_sans_regular"
-                        android:text="Use filter"
-                        android:textColor="@color/dark_grey"
-                        android:visibility="visible" />
 
                 </LinearLayout>
         </LinearLayout>
