--- a/BookExchange/app/src/main/res/layout/activity_item.xml
+++ b/BookExchange/app/src/main/res/layout/activity_item.xml
@@ -39,7 +39,7 @@
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
                         android:scaleType="fitCenter"
-                        android:src="@drawable/ic_add_image_white_240" />
+                        android:src="@drawable/empty" />
 
                 </androidx.cardview.widget.CardView>
 
