--- a/BookExchange/app/src/main/res/layout/activity_item_settings.xml
+++ b/BookExchange/app/src/main/res/layout/activity_item_settings.xml
@@ -90,7 +90,7 @@
                 android:ems="10"
                 android:fontFamily="@font/open_sans_regular"
                 android:hint="Enter name..."
-                android:inputType="text|textMultiLine|textCapSentences"
+                android:inputType="text"
                 android:minHeight="48dp"
                 android:textColor="@color/light_grey"
                 android:textColorHint="@color/light_grey"
@@ -133,7 +133,7 @@
                 android:ems="10"
                 android:fontFamily="@font/open_sans_regular"
                 android:hint="Enter description..."
-                android:inputType="text|textMultiLine|textCapSentences"
+                android:inputType="text"
                 android:minHeight="48dp"
                 android:textColor="@color/light_grey"
                 android:textColorHint="@color/light_grey"
@@ -162,6 +162,7 @@
                 android:textColor="@color/light_grey"
                 android:textColorHint="@color/light_grey"
                 android:textSize="18sp"
+                android:inputType="text"
                 android:dropDownHeight="400dp"/>
 
             <TextView
