--- a/BookExchange/app/src/main/res/layout/fragment_add.xml
+++ b/BookExchange/app/src/main/res/layout/fragment_add.xml
@@ -91,7 +91,7 @@
                 android:ems="10"
                 android:fontFamily="@font/open_sans_regular"
                 android:hint="Enter name..."
-                android:inputType="text|textMultiLine|textCapSentences"
+                android:inputType="text"
                 android:minHeight="48dp"
                 android:textColor="@color/light_grey"
                 android:textColorHint="@color/light_grey"
@@ -126,21 +126,27 @@
                     android:textSize="10sp" />
             </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="300dp"
+            android:layout_height="wrap_content">
+
             <EditText
                 android:id="@+id/description_edit_text"
-                android:layout_width="300dp"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:ems="10"
                 android:fontFamily="@font/open_sans_regular"
                 android:hint="Enter description..."
-                android:inputType="text|textMultiLine|textCapSentences"
+                android:inputType="text"
                 android:minHeight="48dp"
                 android:textColor="@color/light_grey"
                 android:textColorHint="@color/light_grey"
                 android:textSize="18sp"
-                android:maxLength = "200"
+                android:maxLength ="200"
+                android:imeOptions="actionDone"
                 />
+        </LinearLayout>
 
             <TextView
             android:id="@+id/city_text"
@@ -160,6 +166,7 @@
                 android:hint="Enter city"
                 android:maxLength="20"
                 android:minHeight="48dp"
+                android:inputType="text"
                 android:textColor="@color/light_grey"
                 android:textColorHint="@color/light_grey"
                 android:textSize="18sp"
