--- a/BookExchange/app/src/main/res/layout/activity_item.xml
+++ b/BookExchange/app/src/main/res/layout/activity_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.home.Item.ItemActivity"
+    tools:context=".ui.home.item.ItemActivity"
     android:id="@+id/item_activity"
     android:background="@color/dark_grey"
     >
