--- a/BookExchange/app/src/main/res/layout/activity_item_settings.xml
+++ b/BookExchange/app/src/main/res/layout/activity_item_settings.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.home.Item.ItemSettingsActivity"
+    tools:context=".ui.home.item.ItemSettingsActivity"
     android:background="@color/dark_grey"
     app:layout_constraintTop_toTopOf="parent">
 
