--- a/BookExchange/app/src/main/res/layout/fragment_home.xml
+++ b/BookExchange/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.home.HomeFragment"
+    tools:context=".ui.home.HomeFragment"
     android:orientation="vertical"
     android:background="@color/dark_grey"
     android:gravity="center_horizontal"
